crates/ridge-parser/tests/fixtures/errors/p019_orphan_doc_at_eof.ridge
-- expect: P019
-- Trigger: doc comment at end of file with no following declaration.
fn f x = x
---
this doc comment has no following item
---
